tests/parser/good/expstmt.gbl
fn f() {
	doThing();
	x;
	a + b;
	compute(1, 2, 3);
}
