tests/parser/errors/call_arg_no_comma.gbl
fn f() {
	foo(1 2);
}
